Fix issue with longest slide in swipeable views being cut off at the bottom

--- a/src/styles/slides.scss
+++ b/src/styles/slides.scss
@@ -31,6 +31,7 @@
 
 .slide {
 	min-height: 300px;
+	padding-bottom: 20px;
 
 	.head {
 		margin-bottom: 1em;
